# nlp_parent_child_speech_intention

./: .gitignore  LICENSE  README.md  part1.ipynb  pyproject.toml
