[project]
name = "finalproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.34.2",
    "datasets>=5.0.0",
    "groq>=1.4.0",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers==3.0.1",
    "setfit==1.1.3",
    "transformers==4.44.2",
    "wordcloud>=1.9.6",
]
